--- a/metabeta/assets/styles/partials/_mb_utility.scss
+++ b/metabeta/assets/styles/partials/_mb_utility.scss
@@ -1,16 +1,20 @@
 @mixin flex-center-center{
+    display: flex;
     align-items: center;
     justify-content: center;
 }
 @mixin flex-center-start{
+    display: flex;
     align-items: center;
     justify-content: flex-start;
 }
 @mixin flex-center-end{
+    display: flex;
     align-items: center;
     justify-content: flex-end;
 }
 @mixin flex-center-between{
+    display: flex;
     align-items: center;
     justify-content: space-between;
 }
@@ -27,4 +31,13 @@
 }
 .align-start{
     align-items: flex-start;
+}
+.text-center{
+    text-align: center;
+}
+.text-start{
+    text-align: left;
+}
+.text-start{
+    text-align: right;
 }
